--- a/.github/workflows/ros_ci.yaml
+++ b/.github/workflows/ros_ci.yaml
@@ -14,6 +14,8 @@ jobs:
       run: echo "::set-output name=today::$(date +'%Y%m%d')"
     - name: Checkout
       uses: actions/checkout@v2
+    - name: Set up QEMU
+      uses: docker/setup-qemu-action@v1
     - name: Setup Docker Buildx
       uses: docker/setup-buildx-action@v1
     - name: Login to DockerHub
@@ -27,7 +29,7 @@ jobs:
       with:
         context: .
         file: ./Dockerfile
-        platforms: linux/amd64
+        platforms: linux/amd64,linux/arm/v7,linux/arm64
         push: true
         tags: |
           rdbox/ros-core-catkinws:${{ steps.date.outputs.today }}
